src/tests/functionality/assignment_5_functions_headers/valid/11_mandatory_include_header_function_definition.c
#include "src/tests/functionality/assignment_5_functions_headers/headers/math_helpers.h"

int main() {
    return add_header(3, 4);
}
