src/tests/functionality/assignment_5_functions_headers/invalid_syntax/03_mandatory_include_missing_quotes.c
#include headers/math_helpers.h

int main() {
    return 0;
}
